LPS-46809 - SF: Fix horizontal scroll bar issue on control panel pages

--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
@@ -507,7 +507,7 @@ $dockbarOpenGradientStart: #0EA6F9;
 			font-size: 20px;
 			height: 17px;
 			position: absolute;
-			right: -5px;
+			right: 0;
 			text-align: center;
 			text-decoration: none;
 			top: 7px;
